--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -22,7 +22,7 @@
         <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
           <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.username | titlecase}}</a>
           <div class="dropdown-menu mt-3" *dropdownMenu>
-            <div class="dropdown-item" (click)="editProfile()">Edit Profile</div>
+            <div class="dropdown-item" routerLink="/member/edit" (click)="editProfile()">Edit Profile</div>
             <div class="dropdown-divider"></div>
             <div class="dropdown-item" (click)="logout()">Logout</div>
           </div>
